fix: response section height on small screen

--- a/src/styles/Graphiql.module.scss
+++ b/src/styles/Graphiql.module.scss
@@ -42,7 +42,11 @@
     margin-bottom: 40px;
     grid-area: response;
     background-color: colors.$white;
-    min-height: 100px;
+    min-height: 300px;
+
+    @media screen and (max-width: 800px) {
+      margin-top: 0;
+    }
   }
 
   &__openButton {
@@ -56,12 +60,18 @@
   }
 }
 
-.section {
-  border-radius: 10px;
-}
-
 .section:not(.main__request) {
   margin-top: 30px;
+}
+
+.section {
+  border-radius: 10px;
+
+  &.main__response {
+    @media screen and (max-width: 800px) {
+      margin-top: 0;
+    }
+  }
 }
 
 @media screen and (max-width: 1100px) {
